// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card CardGenerator validate function getNavigationPropertyInfoFromEntity 1`] = `
[
  {
    "name": "_RootPaymentTerms",
    "properties": [
      {
        "label": "_RootPaymentTerms",
        "name": "_RootPaymentTerms",
        "type": "com.sap.gateway.srvd.ui_cashbank_manage.v0001.CashBankType",
      },
    ],
  },
]
`;

exports[`Card CardGenerator validate function getPropertyInfoFromEntity 1`] = `
[
  {
    "UOM": "kg",
    "isDate": false,
    "kind": "Property",
    "label": "property1",
    "name": "property1",
    "type": "Edm.String",
  },
  {
    "UOM": "INR",
    "isDate": false,
    "kind": "Property",
    "label": "property2",
    "name": "property2",
    "type": "Edm.String",
  },
]
`;

exports[`Card CardGenerator validate function getPropertyInfoFromEntity with navigation 1`] = `
[
  {
    "UOM": "",
    "category": "Select a Navigational Property:",
    "isDate": false,
    "kind": "NavigationProperty",
    "label": "property2",
    "name": "property2",
    "type": "com.sap.gateway.srvd.ui_cashbank_manage.v0001.property2",
  },
  {
    "UOM": "kg",
    "category": "Select a Property:",
    "isDate": false,
    "kind": "Property",
    "label": "property1",
    "name": "property1",
    "type": "Edm.String",
  },
]
`;

exports[`Card CardGenerator validate function getPropertyReferenceKey 1`] = `
[
  {
    "UOM": "",
    "isDate": false,
    "kind": "Property",
    "label": "BankCountry",
    "name": "BankCountry",
    "type": "Edm.String",
  },
  {
    "UOM": "",
    "isDate": false,
    "kind": "Property",
    "label": "BankInternalID",
    "name": "BankInternalID",
    "type": "Edm.String",
  },
  {
    "UOM": "",
    "isDate": false,
    "kind": "Property",
    "label": "IsActiveEntity",
    "name": "IsActiveEntity",
    "type": "Edm.Boolean",
  },
]
`;
